tests/negative/test_decl_name_taken.orb
fnc main() {
    i32 x;
    ptr x = null;
}